Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24436

Cannot push a branch to Gerrit that is already on another remote

XMLWordPrintable

    • All
    • 354f62805232663d5b26c0abe14de6962614b5e6 (qt-creator/qt-creator/master)

      I've pushed my local branch from machine A to a feature branch on Gitlab and fetched that branch on machine B, where I created a local branch from that feature branch.

      I now cannot push this branch to Gerrit from Creator, as the Push to Gerrit dialog contains no commits.

      The reason for this is, that Creator runs:

      git branch -r --contains ^ 

      which results in

      error: malformed object name ^ 

      Pushing the commits from the command line (git push gerrit HEAD:refs/for/master) works without problems. I think it should work from Creator too, as my local branch is still ahead of master.

        For Gerrit Dashboard: QTCREATORBUG-24436
        # Subject Branch Project Status CR V

            orgads Orgad Shaneh
            aha_1980 André Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes