Git: Filter out commits according to active remote

... in the Push to Gerrit dialog.

Fixes: QTCREATORBUG-24436
Change-Id: I2f1ab49d9fbeb09ffb66de23d34a2facd53cb725
Reviewed-by: André Hartmann <aha_1980@gmx.de>